block user scale on mobile and fixed centerng in edge

--- a/src/sass/layout/_brands.scss
+++ b/src/sass/layout/_brands.scss
@@ -26,9 +26,11 @@
       img{
         display: block;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        margin: auto;
+        top:0;
+        left:0;
+        bottom: 0;
+        right: 0;
         width: 70%;
       }
     }
