--- a/src/sass/layout/_newsletter.scss
+++ b/src/sass/layout/_newsletter.scss
@@ -29,6 +29,7 @@
 				width: 90%;
 				height: 70px;
 				padding-right: 70px;
+				border-radius: 0px;
 			};
 		}
 		input[type="submit"]{
@@ -45,6 +46,7 @@
 				width: 70px;
 				height: 70px;
 				margin-left: -70px;
+				border-radius: 0px;
 			};
 			&:active{
 				opacity: 0.8;
